# harmonic-inference

./: .codecov.yml  .coverage  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Chord-Eval.ipynb  Evaluation.ipynb  LICENSE  ML_course_data.ipynb  ModelTrainJson.ipynb  README.md  Scratch.ipynb  Selim_project_data.ipynb  ablation.py  aggregate_corpus_data.py  annotate.py  corpus_reading.py  corpus_utils.py  cpm_grid_search.py  create_chord-features_data.py  create_data.py  create_h5_data.py  create_ml_course_data.py  create_sched_sampling_data.py  environment.yml  eval_utils.py  grid_search.py  harmonic_inference_data.py  harmonic_inference_models.py  harmonic_utils.py  model_trainer.py  pyproject.toml  rhythmic_utils.py  setup.cfg  setup.py  sps_data.ipynb  test.py  test_cpm.py  (+3 more)
checkpoints-best/ccm/lightning_logs/version_0/: events.out.tfevents.1621252816.b8af1307682d.405.0
checkpoints-best/csm/lightning_logs/version_0/: events.out.tfevents.1620382541.sysadmin-System-Product-Name.1407.0
checkpoints-best/csm/lightning_logs/version_2/: events.out.tfevents.1620407474.sysadmin-System-Product-Name.30699.0
checkpoints-best/ctm/lightning_logs/version_0/: hparams.yaml
checkpoints-best/ksm/lightning_logs/version_0/: hparams.yaml
checkpoints-fh-best/csm/lightning_logs/version_1/: events.out.tfevents.1620355730.4b884c943751.3163617.0  hparams.yaml
checkpoints-fh-best/ctm/lightning_logs/version_0/: hparams.yaml
checkpoints-fh-best/icm/: initial_chord_prior.json
checkpoints-fh-best/ksm/lightning_logs/version_0/: hparams.yaml
checkpoints-grid_search-best/ccm/lightning_logs/version_0/: hparams.yaml
checkpoints-grid_search-best/csm/lightning_logs/version_0/: hparams.yaml
checkpoints-grid_search-best/csm/lightning_logs/version_1/: hparams.yaml  (+1 more)
checkpoints-grid_search-best/icm/: initial_chord_prior.json
corpus_data/: files.tsv  measures.tsv
corpus_data-ismir/: measures.tsv
h5_data-fh/: ChordClassificationDataset_valid_seed_0.h5  ChordSequenceDataset_valid_seed_0.h5  ChordTransitionDataset_train_seed_0.h5  KeySequenceDataset_test_seed_0.h5  KeyTransitionDataset_test_seed_0.h5
h5_data-roman_xml/: ChordClassificationDataset_test_seed_0.h5  ChordSequenceDataset_test_seed_0.h5  ChordSequenceDataset_train_seed_0.h5  ChordTransitionDataset_test_seed_0.h5  ChordTransitionDataset_valid_seed_0.h5  KeySequenceDataset_train_seed_0.h5  KeySequenceDataset_valid_seed_0.h5  KeyTransitionDataset_train_seed_0.h5  KeyTransitionDataset_valid_seed_0.h5
harmonic_inference.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
harmonic_inference/data/: chord.py  corpus_constants.py  corpus_reading.py  data_types.py  datasets.py  harmonic_inference_data.py  key.py  note.py  piece.py  vector_decoding.py
harmonic_inference/models/: chord_classifier_models.py  chord_classifiers.py  chord_pitches_models.py  chord_sequence_models.py  chord_transition_models.py  initial_chord_models.py  joint_model.py  key_post_processor_models.py  key_sequence_models.py  key_transition_models.py  model_interface.py  model_trainer.py
harmonic_inference/utils/: beam_search_utils.py  corpus_utils.py  data_utils.py  eval_utils.py  forces.py  harmonic_constants.py  harmonic_utils.py  rhythmic_utils.py
model_jsons/: csm-no_inv.json  csm-triad-no_inv.json
model_jsons-best/: ccm.json  ksm.json
model_jsons-best/csm/: csm-i.json  csm-t.json
model_jsons-grid_search/ccm/: ccm-0.json  ccm-2.json  ccm-3.json
model_jsons-grid_search/csm/: csm-10-0.json  csm-14-0.json  csm-14-1.json  csm-14.json  csm-2-0.json  csm-2.json  csm-4-0.json  csm-4-1.json  csm-6-1.json  csm-i-6.json  csm-t-0.json  csm-t-4.json  csm-t-5.json  csm-t-6.json
model_jsons-grid_search/ctm/: ctm-1.json  ctm-3.json
model_jsons-grid_search/ksm/: ksm-0.json  ksm-2.json  ksm-7.json
model_jsons/ccm/: ccm-0.json  ccm-1.json  ccm-2.json  ccm-3.json
model_jsons/csm/: csm-0.json  csm-1.json  csm-10.json  csm-12.json  csm-14.json  csm-2.json  csm-3.json  csm-4.json  csm-6.json  csm-8.json
tests/: test_corpus.py  test_corpus_utils.py  test_harmonic_utils.py  test_piece.py  test_rhythmic_utils.py
(+15 files in other folders)
