[metadata]
name = harmonic_inference
version = 2020.10rc1
licence = MIT
url = https://github.com/apmcleod/harmonic_inference
author = Andrew McLeod
author_email = andrew.mcleod@epfl.ch
keywords = music harmony chord key inference
description = Packages for performing harmonic inference (chord and key detection) from music.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
# please keep package list sorted
install_requires =
    numpy
    pandas
    pretty_midi
    torch
    tqdm
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov
python_requires =
    ~=3.6
packages = find:

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --cov

[easy_install]
index_url = https://pypi.org/simple/

[flake8]
max-line-length = 100
ignore = E203,W503