[metadata]
name = harmonic_inference
version = 1.0.0
licence = MIT
url = https://github.com/apmcleod/harmonic_inference
author = Andrew McLeod
author_email = andrew.mcleod@epfl.ch
keywords = music harmony key chord induction
description = A package for detecting key and chord structures from music data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages =
    harmonic_inference
install_requires =
    h5py == 3.3.0
    matplotlib == 3.4.2
    ms3 == 0.4.8
    music21 == 6.7.1
    numpy == 1.21.1
    pandas == 1.3.1
    pytorch-lightning == 1.3.8
    torch == 1.9.0
    tqdm == 4.61.2
setup_requires =
    pytest-runner
python_requires =
    == 3.9.5
tests_require =
    pytest == 6.2.4
    pytest-cov == 2.12.1

[options.extras_require]
dev =
    black == 21.7b0
    flake8 == 3.9.2
    ipykernel == 6.0.3
    isort == 5.9.2
    jupyter == 1.0.0
    pre-commit == 2.13.0
    pylint == 2.9.5
    pytest == 6.2.4
    pytest-cov == 2.12.1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts =
    --cov=harmonic_inference
    --cov=harmonic_inference/data
    --cov=harmonic_inference/models
    --cov=harmonic_inference/utils
    --cov=tests

[flake8]
max-line-length = 100
ignore = E203,W503
