[metadata]
name = harmonic_inference
version = 1.0.0
licence = MIT
url = https://github.com/apmcleod/harmonic_inference
author = Andrew McLeod
author_email = andrew.mcleod@epfl.ch
keywords = music harmony key chord induction
description = A package for detecting key and chord structures from music data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: MIT
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages =
    harmonic_inference
install_requires =
    h5py
    matplotlib
    ms3>=1.2.0
    music21
    numpy
    pandas
    pytorch-lightning
    torch
    tqdm
setup_requires =
    pytest-runner
python_requires =
    >= 3.9.5
tests_require =
    pytest
    pytest-cov

[options.extras_require]
dev =
    black
    flake8
    ipykernel
    isort
    jupyter
    pre-commit
    pylint
    pytest
    pytest-cov

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts =
    --cov=harmonic_inference
    --cov=harmonic_inference/data
    --cov=harmonic_inference/models
    --cov=harmonic_inference/utils
    --cov=tests

[flake8]
max-line-length = 100
ignore = E203,W503
